--- a/animation.html
+++ b/animation.html
@@ -35,7 +35,7 @@
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Projects</a>
-                <a href="#">Contact</a>
+                <a href="#">Connect</a>
             </div>
         </nav>
         <section>
