--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -18,7 +18,11 @@
     <div class="left-content">
   <img src="/Assets/my-avatar.webp" style="width:160px">
         <h2>Kota Sai Kumar</h2>
-        <button>Web Developer</button><hr styl>
+        <button>Web Developer</button><hr>
+        <div class="icon">
+            <img src ="/Assets/email-5-16.ico">
+            <h4>Email <br><span>kotasaikumar.ksk444@gmail.com</span></h4>
+        </div>
     </div>
     </section>
     <div class="right-content">
