--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -20,7 +20,9 @@
         <h2>Kota Sai Kumar</h2>
         <button>Web Developer</button><hr>
         <div class="icon">
-            <img src ="/Assets/email-5-16.ico">
+            <div class="icon img_email">
+            <img src ="/Assets/"></div>
+
             <h4>Email <br><span>kotasaikumar.ksk444@gmail.com</span></h4>
         </div>
     </div>
