--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -21,7 +21,7 @@
         <button>Web Developer</button><hr>
         <div class="icon">
             <div class="icon img_email">
-            <img src ="/Assets/"></div>
+            <img src ="/Assets/email.png" ></div>
 
             <h4>Email <br><span>kotasaikumar.ksk444@gmail.com</span></h4>
         </div>
