--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -21,9 +21,7 @@
         <h2>Kota Sai Kumar</h2>
         <button>Web Developer</button><hr>
         <div class="icon">
-            <i class="material-symbols-outlined">
-                mail
-            </i>
+            <i class="fa-icon"></i>
                 <h4>Email <br><span>kotasaikumar.ksk444@gmail.com</span></h4>
         </div>
     </div>
