--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -21,8 +21,13 @@
         <h2>Kota Sai Kumar</h2>
         <button>Web Developer</button><hr>
         <div class="icon">
-            <i class="fa-icon"></i>
+
+            <i class="fa-icon"><img src="/Assets/download.png"></i>
                 <h4>Email <br><span>kotasaikumar.ksk444@gmail.com</span></h4>
+                </div>
+                <div class="icon">
+                <i class="fa-icon"><img src="/Assets/phone.png"></i>
+                <h4>Phone<br><span>+919014552710</span></h4></div>
         </div>
     </div>
     </section>
