--- a/Web-fundamentals/Wether-app/wether.html
+++ b/Web-fundamentals/Wether-app/wether.html
@@ -12,15 +12,15 @@
         <div>
         <div class="weather">
         <div class="temperature">
-            20
+            
         </div>
         <div class="location">
-            <p>Hyderabad</p>
-            <span>Time and Date</span>
+            <p></p>
+            <span></span>
         </div>
         <div class="condition">
             <img src="">
-            <span>Current condition</span>
+            <span></span>
         </div>
     </div>
     </div>
