--- a/Web-fundamentals/kanban-dashboard/index.html
+++ b/Web-fundamentals/kanban-dashboard/index.html
@@ -18,16 +18,16 @@
             <div class="color-section">
                 <h5>Task Categorization: </h5>
                 <div class="yellow color-box">
-                    <h4>Not Started</h4>
+                    <h4>Low priority</h4>
                  </div>
                 <div class="lightblue color-box">
-                    <h4>Work in progress</h4>
+                    <h4>Medium priority</h4>
                 </div>
                 <div class="burlywood color-box">
-                    <h4>In review</h4>
+                    <h4>High priority</h4>
                 </div>
                 <div class="green color-box">
-                        <h4>Completed</h4>
+                        <h4>Critical priority</h4>
                 </div>
 
             </div>
@@ -38,12 +38,12 @@
         </div>
     </nav>
     <div class="ticket-area">
-    <div class="task-details">
+    <!-- <div class="task-details">
         <div class="ticket-color yellow"></div>
             <div class="ticket-id"></div>
             <div class="ticket-task"></div>
             <div class="lock-icon"><i class="fa-solid fa-lock"></i></div>      
-    </div>
+    </div> -->
     </div>
     
         <div class="new-ticket-area">
@@ -71,4 +71,5 @@
             
 </body>
 <script src="/Web-fundamentals/kanban-dashboard/script.js"></script>
+<script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
 </html>
