--- a/Web-fundamentals/weather-app/weather.html
+++ b/Web-fundamentals/weather-app/weather.html
@@ -12,24 +12,24 @@
         <div>
         <div class="weather">
         <div class="temperature">
-            
+            26c
         </div>
         <div class="location">
-            <p></p>
-            <span></span>
+            <p>Hyderabad</p>
+            <span>rainy conditions</span>
         </div>
         <div class="condition">
             <img src="">
-            <span></span>
+            <span>xyz</span>
         </div>
     </div>
     </div>
         <nav>
-        <form>
-            <input type="text" placeholder="Search for location" class="searchField">
-            <button type="submit">Search</button>
-        </form>
-    </nav>
+            <form>
+                <input type="text" placeholder="Search for location" class="search-area">
+                <button type="submit">Search</button>
+            </form>
+        </nav>
 </div>
 
 </body>
