--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -25,9 +25,14 @@
             <i class="fa-icon"><img src="/Assets/download.png"></i>
                 <h4>Email <br><span>kotasaikumar.ksk444@gmail.com</span></h4>
                 </div>
+                <!-- <i class="fa-solid fa-laptop-code"></i> -->
                 <div class="icon">
                 <i class="fa-icon"><img src="/Assets/phone.png"></i>
                 <h4>Phone<br><span>+919014552710</span></h4></div>
+                <div class="icon">
+                    <i class="fa-solid fa-calendar-day"></i>
+                    <h4>Birthday<br><span>July 01, 1993</span></h4>
+                </div>
         </div>
     </div>
     </section>
