--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -30,7 +30,7 @@
                 <i class="fa-icon"><img src="/Assets/phone.png"></i>
                 <h4>Phone<br><span>+919014552710</span></h4></div>
                 <div class="icon">
-                    <i class="fa-solid fa-calendar-day"></i>
+                    <i class="fa-icon"><img src="/Assets/calender-birth.png"></i>
                     <h4>Birthday<br><span>July 01, 1993</span></h4>
                 </div>
         </div>
