--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -33,6 +33,15 @@
                     <i class="fa-icon"><img src="/Assets/calender-birth.png"></i>
                     <h4>Birthday<br><span>July 01, 1993</span></h4>
                 </div>
+                <div class="icon">
+                    <i class="fa-icon"><img src="/Assets/location.png"></i>
+                    <h4>Location<br><span>Hyderabad, Telangana, India</span></h4>
+                </div><hr>
+                <div class="icon">
+                    <div class="social-links">
+                    <i class="fa-icon"><img src="/Assets/"></i>
+                </div>
+                </div>
         </div>
     </div>
     </section>
