--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -37,9 +37,8 @@
                     <i class="fa-icon"><img src="/Assets/location.png"></i>
                     <h4>Location<br><span>Hyderabad, Telangana, India</span></h4>
                 </div><hr>
-                <div class="icon">
                     <div class="social-links">
-                    <i class="fa-icon"><img src="/Assets/"></i>
+                       <img class="fa-icon"><img src ="/    "
                 </div>
                 </div>
         </div>
