--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -38,11 +38,12 @@
                     <h4>Location<br><span>Hyderabad, Telangana, India</span></h4>
                 </div><hr>
                     <div class="social-links">
-                       <img class="fa-icon"><img src ="/    "
+                       <i class="fa-icon"><img src ="/Assets/icons8-linkedin-50.png"></i>
+                       <i class="fa-icon"><img src="/Assets/icons8-github-50.png"></i>
+                       
                 </div>
                 </div>
-        </div>
-    </div>
+        
     </section>
     <div class="right-content">
     <header>
