--- a/Web-fundamentals/kanban-dashboard/index.html
+++ b/Web-fundamentals/kanban-dashboard/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Catamaran:wght@100..900&family=Gupter:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -71,7 +74,16 @@
        <!-- Ticket container section ends here -->
 
 <!-- task status category section started here -->
-
+<section>
+    <div class="status_container">
+        <div class="status_category">
+        <h2>Not started</h2>
+        <h2>In Progress</h2>
+        <h2>In Review</h2>
+        <h2>Completed</h2>
+        </div>
+    </div>
+</section>
 
 </body>
 <script src="/Web-fundamentals/kanban-dashboard/script.js"></script>
