--- a/Web-fundamentals/kanban-dashboard/index.html
+++ b/Web-fundamentals/kanban-dashboard/index.html
@@ -76,12 +76,10 @@
 <!-- task status category section started here -->
 <section>
     <div class="status_container">
-        <div class="status_category">
-        <h2>Not started</h2>
-        <h2>In Progress</h2>
-        <h2>In Review</h2>
-        <h2>Completed</h2>
-        </div>
+        <div class="status_category not_started" ><p>Not Started</p></div>
+        <div class="status_category in_progress"><p>In Progress</p></div>
+        <div class="status_category in_review"><p>In Review</p></div>
+        <div class="status_category completed"><p>Completed</p></div>
     </div>
 </section>
 
