--- a/Web-fundamentals/portfolio-dup.html
+++ b/Web-fundamentals/portfolio-dup.html
@@ -61,8 +61,7 @@
                 <div class="navigation_links">
                     <a href="#about">About</a>
                     <a href="#resume">Resume</a>
-                    <a href="#">Portfolio</a>
-                    <a href="#">Blog</a>
+                    <a href="#portfolio">Portfolio</a>
                     <a href="#">Contact</a>
                 </div>
             </nav>
@@ -186,7 +185,9 @@
 
             </section><br>
             <section>
-             
+                    <div class="portfolio" id="portfolio">
+                        <h1>Portfolio</h1><hr>
+                
             </section>
         </header>
 
