--- a/Web-fundamentals/kanban-dashboard/index.html
+++ b/Web-fundamentals/kanban-dashboard/index.html
@@ -4,86 +4,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanban Dashboard</title>
+    <title>Kanban Board</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Catamaran:wght@100..900&family=Gupter:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Catamaran:wght@100..900&family=Gupter:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <!-- nav section starts here
-    we create Menu, prioties, add and delete btn
-    -->
     <nav>
-        <div class="home">
-        <i class="fa-solid fa-bars"></i></div>
-        <div class="priority_container">
-            <div class="priority_color">
-            <div class="yellow color_box"></div><p>Low Priority</p>
-            <div class="green color_box"></div><p>Medium Priority</p>
-            <div class="lightblue color_box"></div><p>High Priority</p>
-            <div class="grey color_box"></div><p>Critical</p>
-</div>
-<section>
-        <form class="ticket_filter">
-            <label class="filter">Choose priority</label>
-            <select Name="Priority_filter" id="Priority_filter">
-                <option value="" disabled selected>Select your priority</option>
-            <option >Low Priority</option>
-            <option>Medium Priority</option>
-            <option>High Priority</option>
-            <option>Critical</option>
-        </select>
-        <div class="filter_removal"><i class="fa-solid fa-filter"></i></div>
-            </form>
-</section>
-<div class="action_btn">
-    <div class="add_btn"><i class="fa-solid fa-plus"></i></div>
-    <div class="delete_btn"><i class="fa-solid fa-trash-can"></i></div>
-                   </div>
-                   
-                   </div>              
-    </nav>
-    <!-- nav section ends here -->
-<!-- new task container section starts here -->
- <section>
-        <div class="task_container">
-                <textarea class="text_area" placeholder="Enter your task details"></textarea>
-                <div class="color_selector">
-                    <div class="color yellow active"></div>
-                    <div class="color green"></div>
-                    <div class="color lightblue"></div>
-                    <div class="color grey"></div>
-                </div>
-        </div>
-        </section>
-     <!-- new task container section ends here -->
-      <!-- Ticket container section starts here -->
-        <div class="ticket_cont">
-            <!-- <div class="ticket_area">
-                <div class="ticket_color yellow"></div>
-                <div class="ticket_id">1233</div>
-                <div class="ticket_task">new task</div>
-                <div class="lock_icon"><i class="fa-solid fa-lock"></i></div>
-            </div>-->
-        </div>
-       <!-- Ticket container section ends here -->
+        <div class="container">
+            <div class="nav_section">
+                <div class="priority_color">
+                    <div class="gray color_box"></div>
+                    <p>Low Priority</p>
+                    <div class="purple color_box"></div>
+                    <p>Medium Priority</p>
+                    <div class="green color_box"></div>
+                    <p>High Priority</p>
+                    <div class="jasper color_box"></div>
+                    <p>Critical</p>
 
-<!-- task status category section started here -->
-<section>
-    <div class="status_container">
-        <div class="status_category not_started" ><p>Not Started</p></div>
-        <div class="status_category in_progress"><p>In Progress</p></div>
-        <div class="status_category in_review"><p>In Review</p></div>
-        <div class="status_category completed"><p>Completed</p></div>
-    </div>
-</section>
+                </div>
+
+                <section>
+                    <form class="ticket_filter">
+                        <label class="filter">Choose priority</label>
+                        <select Name="Priority_filter" id="priority_filter">
+                            <option value="" disabled selected>Select your priority</option>
+                            <option>Low Priority</option>
+                            <option>Medium Priority</option>
+                            <option>High Priority</option>
+                            <option>Critical</option>
+                        </select>
+                        <div class="filter_removal"><i class="fa-solid fa-filter"></i></div>
+                    </form>
+                </section>
+
+                <div class="action_btn">
+                    <div class="add_btn"><i class="fa-solid fa-plus"></i></div>
+                    <div class="delete_btn"><i class="fa-solid fa-trash-can"></i></div>
+                </div>
+
+            </div>
+        </div>
+    </nav>
+    </section>
+    <section>
+        <div class="new_task_area">
+            <input type="text" placeholder="Enter your task details" id="new_task">
+            <input type="radio" Name="Priority_selector" id="low_priority" value="low_priority" checked="checked">
+            <label for="low_priority">Low Priority</label>
+            <input type="radio" class="task_cat" Name="Priority_selector" id="medium_priority" value="medium_priority">
+            <label for="medium_priority">Medium Priority</label>
+            <input type="radio" Name="Priority_selector" id="high_priority" value="high_priority">
+            <label for="high_priority">High Priority</label>
+            <input type="radio" Name="Priority_selector" id="critical" value="critical">
+            <label for="critical">Critical</label>
+            </select>
+            <button type="submit" id="add_task">Add +</button>
+            <button id="cancel_task">Cancel</button>
+        </div>
+    </section>
+    <section>
+        <div class="ticket_container">
+            <!-- <div class="ticket_area" draggable="true">
+                <div class="ticket_task_area">this is a new ticket</div>
+                <div class="ticket_id_sec">
+                    <div class="ticket_color gray"></div>
+                <div class="ticket_id">1234</div>
+               
+                </div>
+            </div> -->
+        </div>
+    </section>
+    <section>
+        <div class="catergoty_section">
+            <div class="sections" id="not_started">
+                <h2>Not Started</h2>
+            </div>
+            <div class="sections" id="in_progress">
+                <h2>In Progress</h2>
+            </div>
+            <div class="sections" id="in_review">
+                <h2>In Review</h2>
+            </div>
+            <div class="sections" id="comp">
+                <h2>Completed</h2>
+            </div>
+        </div>
+    </section>
 
 </body>
+
 <script src="/Web-fundamentals/kanban-dashboard/script.js"></script>
 <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
+
 </html>
