--- a/Web-fundamentals/JS/basic.html
+++ b/Web-fundamentals/JS/basic.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Please NOTE that the link to assets (like images) need to be set in global context.
-For example:
-To access an image from assets folder correct way to set src attribute is 
-
-src = 'profile.png'
-
-instead of 
-
-src = './assets/profile.png'
--->
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ticket Management App</title>
-
-    <link rel="stylesheet" href="css.css">
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-
-    <script src="js.js"></script>
+    
 </body>
-
 </html>
