--- a/Web-fundamentals/kanban-dashboard/index.html
+++ b/Web-fundamentals/kanban-dashboard/index.html
@@ -66,7 +66,8 @@
             <label for="high_priority">High Priority</label>
             <input type="radio" Name="Priority_selector" id="critical" value="critical">
             <label for="critical">Critical</label>
-            </select>
+            <label for="duedate">Due Date:</label>
+            <input type="date" id="duedate" name="duedate">
             <button type="submit" id="add_task">Add +</button>
             <button id="cancel_task">Cancel</button>
         </div>
